scripts/deploy/deployBkp.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clusteringress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: orderservicelb
                port:
                  number: 8101
---
apiVersion: v1
kind: Service
metadata:
  name: orderservicelb
  labels:
    app: orderservice
spec:
  selector:
    app: orderservice
  ports:
    - name: http
      port: 8101
      targetPort: 8101
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orderservice
  labels:
    app: orderservice
spec:
  replicas: 2
  selector:
    matchLabels:
     app: orderservice
  template:
    metadata:
      labels:
        app: orderservice
    spec:
      containers:
        - name: orderservice
          image: 767398135921.dkr.ecr.us-east-1.amazonaws.com/buildrepo:orderserver
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8101
              
              
              
-------------------



---
apiVersion: v1
kind: Namespace
metadata:
  name: test
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: test
  name: orderservice
  labels:
    app: orderservice
spec:
  replicas: 2
  selector:
    matchLabels:
     app: orderservice
  template:
    metadata:
      labels:
        app: orderservice
    spec:
      containers:
        - name: orderservice
          image: 905418402642.dkr.ecr.us-east-1.amazonaws.com/buildrepo:orderserver
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8101
---
apiVersion: v1
kind: Service
metadata:
  namespace: test
  name: orderservicelb
spec:
  ports:
    - port: 8101
      targetPort: 8101
      protocol: TCP
  type: NodePort
  selector:
    app: orderservice
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: test
  name: ingress-2048
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: service-2048
              port:
                number: 8101
